@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_skins" meta_type="Plone Skins Tool">
+  <object name="FeatureArticle" meta_type="Filesystem Directory View"
+      directory="Products.FeatureArticle/skins/FeatureArticle"/>
+  <skin-path name="*">
+    <layer name="FeatureArticle" insert-after="custom"/>
+  </skin-path>
+</object>
+
