@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+ <object name="FeatureArticle" meta_type="Factory-based Type Information"/>
+ <object name="FeedbackFolder" meta_type="Factory-based Type Information"/>
+ <object name="UserFeedback" meta_type="Factory-based Type Information"/>
+</object>
