@@ -1,0 +1,36 @@
+<?xml version="1.0"?>
+<object name="FeatureArticle" meta_type="Factory-based Type Information"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title">Feature Article</property>
+ <property name="description">
+      A featured article about a Connexions author
+      </property>
+ <property name="content_icon">document_icon.gif</property>
+ <property name="content_meta_type">FeatureArticle</property>
+ <property name="product">FeatureArticle</property>
+ <property name="factory">addFeatureArticle</property>
+ <property name="immediate_view">base_edit</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">False</property>
+ <property name="allowed_content_types"/>
+ <property name="allow_discussion">False</property>
+ <alias from="edit" to="base_edit"/>
+ <action title="View" action_id="view" category="object" condition_expr=""
+    url_expr="string:${object_url}/feature_view" visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="Edit" action_id="edit" category="object" condition_expr=""
+    url_expr="string:${object_url}/base_edit" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="Properties" action_id="metadata" category="object"
+    condition_expr="" url_expr="string:${object_url}/base_metadata"
+    visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+ <action title="References" action_id="references" category="object"
+    condition_expr="object/archetype_tool/has_graphviz"
+    url_expr="string:${object_url}/reference_edit" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+</object>
