@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<object name="FeedbackFolder" meta_type="Factory-based Type Information"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title"></property>
+ <property name="description"></property>
+ <property name="content_icon"></property>
+ <property name="content_meta_type"></property>
+ <property name="product"></property>
+ <property name="factory"></property>
+ <property name="immediate_view"></property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">True</property>
+ <property name="allowed_content_types">UserFeedback</property>
+ <property name="allow_discussion">False</property>
+ <alias from="(Default)" to="(Default)"/>
+ <alias from="view" to="(Default)"/>
+</object>
